Small header changes

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
            ga('create', 'UA-59952504-1', 'auto');
            ga('send', 'pageview');
         </script>
-		<title>CHOP by University of Birmingham</title>
+		<title>Deep Dexterous Grasping</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -62,8 +62,8 @@
             -->
             <!-- Banner -->
 			<section id="banner">
-				<h2>Compositional Hierarchy of Parts</h2>
-				<p>Learning hierarchical representations of object shapes from 2D projections. Compositional Hierarchy of Parts (CHOP) is an algorithm for learning increasingly complex image features, which can be used for object categorization, reconstruction, and detection. It is a scalable, highly parallelized attempt to reduce the need of feature engineering for visual tasks.</p>
+				<h2>Deep Dexterous Grasping</h2>
+				<p>Grasping objects is difficult. Dexterous grasping using a single-view depth camera is harder. On this page, you'll find all you need about our new paper ``Deep Dexterous Grasping", accompanying grasping simulator, 2M simulated grasp dataset, using them for re-running existing data, and collecting new grasps.</p>
                 <!--
                 <ul class="actions">
 					<li><a href="#" class="button special">Sign Up</a></li>
@@ -78,9 +78,8 @@
 				<section class="box special">
 					<span class="image featured"><img src="images/boris1.jpg" alt="" /></span>
 					<header class="major">
-                    <h2>CHOP is the core vision algorithm in <a href="http://www.pacman-project.eu">PaCMan EU project</a>,
-						<br />
-						which focuses on building robots that will load a dishwasher.</h2>
+					<h2>The paper includes two new methods that improve the state-of-the-art in dexterous grasping of novel objects using a single view depth camera.</h2>
+
                 <p>In order for the robots to interact with our complex world, we need successful computer vision systems. Recent advances in image categorization and detection challenges suggest that deep, hierarchical learning methods can capture highly implicit visual patterns. CHOP is a learning algorithm that builds part-based object models across multiple scales. It is built upon the principles of <a href="http://www.mobvis.org/publications/cvpr07_fidler_leonardis.pdf">LHOP</a> by Leonardis et al., as well as many other hierarchical compositional methods. At the core of our algorithm is a graph mining method, <a href="http://ailab.wsu.edu/subdue/">SUBDUE</a>, which implements a Minimum Description Length based part selection criterion.</p>
 					</header>
 				</section>
