--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <!-- Banner -->
 			<section id="banner">
 				<h2>Deep Dexterous Grasping</h2>
-				<p>Grasping objects is difficult. Dexterous grasping using a single-view depth camera is harder. On this page, you'll find all you need about our new paper ``Deep Dexterous Grasping", accompanying grasping simulator, 2M simulated grasp dataset, using them for re-running existing data, and collecting new grasps.</p>
+				<p>Grasping objects is difficult. Dexterous grasping using a single-view depth camera is harder. On this page, you'll find all you need about our new paper "Deep Dexterous Grasping", accompanying grasping simulator, 2M simulated grasp dataset, re-running grasps in simulation and collecting new data.</p>
                 <!--
                 <ul class="actions">
 					<li><a href="#" class="button special">Sign Up</a></li>
@@ -79,8 +79,7 @@
 					<span class="image featured"><img src="images/boris1.jpg" alt="" /></span>
 					<header class="major">
 					<h2>The paper includes two new methods that improve the state-of-the-art in dexterous grasping of novel objects using a single view depth camera.</h2>
-
-                <p>In order for the robots to interact with our complex world, we need successful computer vision systems. Recent advances in image categorization and detection challenges suggest that deep, hierarchical learning methods can capture highly implicit visual patterns. CHOP is a learning algorithm that builds part-based object models across multiple scales. It is built upon the principles of <a href="http://www.mobvis.org/publications/cvpr07_fidler_leonardis.pdf">LHOP</a> by Leonardis et al., as well as many other hierarchical compositional methods. At the core of our algorithm is a graph mining method, <a href="http://ailab.wsu.edu/subdue/">SUBDUE</a>, which implements a Minimum Description Length based part selection criterion.</p>
+                <p></p>
 					</header>
 				</section>
 
@@ -89,24 +88,24 @@
 						<section>
 							<span class="icon major fa-file-pdf-o accent2"></span>
 							<h3>Paper</h3>
-                            <p>We have presented an early version of CHOP at ECCV 2014, in Zurich, Switzerland in September 2014. You can download the paper using this <a href="http://arxiv.org/pdf/1501.05192v2.pdf">link</a>, while the supplementary meterial can be found <a href="http://link.springer.com/content/esm/chp:10.1007/978-3-319-10578-9_37/file/MediaObjects/978-3-319-10578-9_37_MOESM1_ESM.pdf">here</a>.</p>
+                            <p>The paper has been publicly available via this <a href="https://google.com">link</a>.</p>
 						</section>
 						<section>
 							<span class="icon major fa-code-fork accent3"></span>
-							<h3>Code</h3>
-                            <p>A MATLAB <a href="http://github.com/rusen/CHOP.git">implementation</a> of CHOP has been released in September, 2014. It builds upon our ECCV paper and incorporates additional features, such as grouping compositions based on their geometric/appearance similarities. </p>
+							<h3>Code & Data</h3>
+                            <p>The grasping simulator is a carefully tuned dexterous grasping environment based on the DLR-II hand. It uses <a href="http://www.mujoco.org"> MuJoCo</a> engine for physics simulation. You can re-run simulated grasps and record videos using this tool. The ability to generate novel grasps on new scenes is coming soon. Click <a href="https://google.com">here</a> for the code and dataset installation instructions.</p>
 						</section>
 					</div>
 					<div class="features-row">
 						<section>
 							<span class="icon major fa-bolt accent4"></span>
 							<h3>PaCMan Project</h3>
-                            <p>We are building next generation robots that will grasp objects they have <i>never</i> seen before. For more information, click <a href="http://www.pacman-project.eu">here</a>.</p>
+                            <p>This work was supported by the PacMan project, where we built a dishwasher-loading humanoid robot. Click <a href="http://www.pacman-project.eu">here</a> for details.</p>
 						</section>
 						<section>
 							<span class="icon major fa-envelope accent5"></span>
 							<h3>Contact</h3>
-                            <p>Want to collaborate? Working on similar problems? Have questions, comments? Please don't hesitate to contact us via <a href="mailto:rusenaktas@gmail.com">e-mail</a>.</p>
+                            <p>Have any questions, comments? Please don't hesitate to contact us via <a href="mailto:rusenaktas@gmail.com">e-mail</a>.</p>
 						</section>
 					</div>
 				</section>
