--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 						<section>
 							<span class="icon major fa-code-fork accent2"></span>
 							<h3>Code</h3>
-                            <p>DDG is based on a carefully tuned dexterous grasp <a href="https://gitlab.com/rusen/Grasp">simulator</a>, currently supporting the DLR-II hand. It is built on the <a href="http://www.mujoco.org">MuJoCo</a> physics engine. You can re-run simulated grasps and record videos using this tool. Click <a href="https://google.com">here</a> to learn how to install the codebase and use it to re-run grasps. 
+                            <p>DDG is based on a carefully tuned dexterous grasp <a href="https://github.com/rusen/Grasp">simulator</a>, currently supporting the DLR-II hand. It is built on the <a href="http://www.mujoco.org">MuJoCo</a> physics engine. You can re-run simulated grasps and record videos using this tool. Click <a href="https://github.com/rusen/Grasp/blob/master/README">here</a> to learn how to install the codebase and use it to re-run grasps. 
                             The ability to generate novel grasps on new scenes is coming soon.</p>
 						</section>
 					</div>
@@ -101,7 +101,7 @@
 						<section>
 							<span class="icon major fa-database accent3"></span>
 							<h3>Dataset</h3>
-                            <p>The data-hungry evaluative models are trained on simulated grasps. We released the two datasets that we used to train evaluative models, containing over 2M grasps. Click <a href="https://google.com">here</a> to download the GM1 dataset (1M), and <a href="https://google.com">here</a> to download GM2 dataset (1M). Refer to the Readme files for on how to use the datasets.</p>
+                            <p>The data-hungry evaluative models are trained on simulated grasps. We released the two datasets that we used to train evaluative models, containing over 2M grasps. Click <a href="https://drive.google.com/file/d/1HYZqaEjZ5jBmEBFIAtxFrR7tD7ySay4p/view?usp=sharing">here</a> to download the GM1 dataset (1M), and <a href="https://drive.google.com/file/d/1dbTEmkc_avNpgLD77CLDSnWnCD1sQgKY/view?usp=sharing">here</a> to download GM2 dataset (1M). Refer to the Readme files for on how to use the datasets.</p>
 						</section>
 						<section>
 							<span class="icon major fa-thumbs-o-up accent4"></span>
