--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
 			<section id="main" class="container">
 
 				<section class="box special">
-					<span class="image featured"><img src="images/boris1.jpg" alt="" /></span>
+					<iframe width="940" height="528" src="https://www.youtube.com/embed/iY7AKW4nqd8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<!--<span class="image featured"><img src="images/boris1.jpg" alt="" /></span>-->
 					<header class="major">
 					<h2>The paper uses deep neural networks to improve the state-of-the-art in dexterous grasping of previously unseen objects using a single view camera. </h2>
                 <p></p>
