--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 						<section>
 							<span class="icon major fa-file-pdf-o accent1"></span>
 							<h3>Paper</h3>
-                            <p>You can access the manuscript via this <a href="https://google.com">link</a>. To the best of our knowledge, this is the first learned generative-evaluative architecture for dexterous grasping. The generative model is a contact-based method that learns from demonstration. The evaluative model is a deep neural network (Resnet-50 or VGG-16 based) that ranks the generated grasps.</p>
+                            <p>You can access the manuscript via this <a href="https://drive.google.com/file/d/1q3R-CWQF2sH6uMTIUpaYhVuKR1tw3LkR/view?usp=sharing">link</a>. To the best of our knowledge, this is the first learned generative-evaluative architecture for dexterous grasping. The generative model is a contact-based method that learns from demonstration. The evaluative model is a deep neural network (Resnet-50 or VGG-16 based) that ranks the generated grasps.</p>
 						</section>
 						<section>
 							<span class="icon major fa-code-fork accent2"></span>
